@@ -45,7 +45,7 @@ class FolkeregisterPersonstatusServiceTest {
                                 .status(FORSVUNNET)
                                 .isNew(true)
                                 .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(FORSVUNNET)));
     }
@@ -63,7 +63,7 @@ class FolkeregisterPersonstatusServiceTest {
                                 DoedsfallDTO.builder()
                                         .doedsdato(LocalDateTime.now())
                                         .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(DOED)));
     }
@@ -80,7 +80,7 @@ class FolkeregisterPersonstatusServiceTest {
                         .opphold(List.of(OppholdDTO.builder()
                                 .type(OppholdDTO.OppholdType.OPPLYSNING_MANGLER)
                                 .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(MIDLERTIDIG)));
     }
@@ -97,7 +97,7 @@ class FolkeregisterPersonstatusServiceTest {
                         .utflytting(List.of(UtflyttingDTO.builder()
                                 .tilflyttingsland("FRA")
                                 .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(UTFLYTTET)));
     }
@@ -115,7 +115,7 @@ class FolkeregisterPersonstatusServiceTest {
                         .bostedsadresse(List.of(BostedadresseDTO.builder()
                                 .vegadresse(new VegadresseDTO())
                                 .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(BOSATT)));
     }
@@ -133,7 +133,7 @@ class FolkeregisterPersonstatusServiceTest {
                         .bostedsadresse(List.of(BostedadresseDTO.builder()
                                 .matrikkeladresse(new MatrikkeladresseDTO())
                                 .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(BOSATT)));
     }
@@ -151,7 +151,7 @@ class FolkeregisterPersonstatusServiceTest {
                         .bostedsadresse(List.of(BostedadresseDTO.builder()
                                 .utenlandskAdresse(new UtenlandskAdresseDTO())
                                 .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(IKKE_BOSATT)));
     }
@@ -166,7 +166,7 @@ class FolkeregisterPersonstatusServiceTest {
                                 List.of(FolkeregisterPersonstatusDTO.builder()
                                         .isNew(true)
                                         .build()))
-                        .build()).get(0);
+                        .build()).getFirst();
 
         assertThat(target.getStatus(), is(equalTo(FOEDSELSREGISTRERT)));
     }
